--- a/ExerciseXData/Views/DietPlans/Create.cshtml
+++ b/ExerciseXData/Views/DietPlans/Create.cshtml
@@ -1,31 +1,64 @@
-﻿@using ExerciseXData_ExerciseLibrary.Models
-@model CategoriesModel
+﻿@model ExerciseXData_DietLibrary.Models.UsersDietsModel
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 
 <form method="post">
-    <div class=" border p-3 mt-4">
+    <div class=" border p-3 mt-4"> 
         <div class=" row pb-2">
             <h1 class="text-primary">Create Category</h1>
             <hr />
         </div>
-        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
+
         <div class="mb-3">
-            <label asp-for="C_Name"></label>
-            <input asp-for="C_Name" class="form-control" />
-            <span asp-validation-for="C_Name" class="text-danger"></span>
+            <label asp-for="U_Id" class="control-label"></label>
+            <input asp-for="U_Id" class="form-control" />
+            <span asp-validation-for="U_Id" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="C_Image"></label>
-            <input asp-for="C_Image" class="form-control" />
-            <span asp-validation-for="C_Image" class="text-danger"></span>
+            <label asp-for="D_Id" class="control-label"></label>
+            <input asp-for="D_Id" class="form-control" />
+            <span asp-validation-for="D_Id" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Custom_Diet_Name" class="control-label"></label>
+            <input asp-for="Custom_Diet_Name" class="form-control" />
+            <span asp-validation-for="Custom_Diet_Name" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UD_Serving_Size" class="control-label"></label>
+            <input asp-for="UD_Serving_Size" type="number" class="form-control" />
+            <span asp-validation-for="UD_Serving_Size" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UD_Frequency" class="control-label"></label>
+            <input asp-for="UD_Frequency" class="form-control" />
+            <span asp-validation-for="UD_Frequency" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UD_Total_Calaroies" class="control-label"></label>
+            <input asp-for="UD_Total_Calaroies" type="number" class="form-control" />
+            <span asp-validation-for="UD_Total_Calaroies" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UD_Start_Date" class="control-label"></label>
+            <input asp-for="UD_Start_Date" type="date" class="form-control" />
+            <span asp-validation-for="UD_Start_Date" class="text-danger"></span>
+        <div/>
+        <div class="mb-3">
+            <label asp-for="UD_End_Date" class="control-label"></label>
+            <input asp-for="UD_End_Date" type="date" class="form-control" />
+                <span asp-validation-for="UD_End_Date" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UD_Completed" class="control-label"></label>
+            <input asp-for="UD_Completed" type="checkbox" />
         </div>
 
-
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+            <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+            <a asp-controller="UsersDiets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        </div>
     </div>
 </form>
 
