--- a/ExerciseXData/Views/DietPlans/Delete.cshtml
+++ b/ExerciseXData/Views/DietPlans/Delete.cshtml
@@ -1,30 +1,53 @@
-﻿ @model ExerciseXData_ExerciseLibrary.Models.CategoriesModel
+﻿@model ExerciseXData_DietLibrary.Models.UsersDietsModel
 
-@{
-    Layout = "~/Views/Admin/_AdminLayout.cshtml";
-}
-
-<form method="post" asp-action="DeleteSuccess" asp-route-id="@Model.C_Id">
+<form method="post" asp-action="DeleteSuccess" asp-route-id="@Model.U_Id">
     @*DeletePOST here can change name with the CategoryController POST method*@
-    <input asp-for="C_Id" hidden />
+    <input asp-for="U_Id" hidden />
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
             <h1 class="text-primary">Delete Category</h1>
             <hr />
         </div>
-        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
-        <div class="mb-3">
-            <label asp-for="C_Name"></label>
-            <input asp-for="C_Name" disabled class="form-control" />
 
-        </div>
-        <div class="mb-3">
-            <label asp-for="C_Image"></label>
-            <input asp-for="C_Image" disabled class="form-control" />
 
-        </div>
+    <div class="form-group">
+        <label asp-for="U_Id" class="control-label"></label>
+            <input asp-for="U_Id" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="D_Id" class="control-label"></label>
+            <input asp-for="D_Id" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Custom_Diet_Name" class="control-label"></label>
+            <input asp-for="Custom_Diet_Name" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_Serving_Size" class="control-label"></label>
+            <input asp-for="UD_Serving_Size" type="number" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_Frequency" class="control-label"></label>
+            <input asp-for="UD_Frequency" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_Total_Calaroies" class="control-label"></label>
+            <input asp-for="UD_Total_Calaroies" type="number" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_Start_Date" class="control-label"></label>
+            <input asp-for="UD_Start_Date" type="date" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_End_Date" class="control-label"></label>
+            <input asp-for="UD_End_Date" type="date" disabled class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="UD_Completed" class="control-label"></label>
+            <input asp-for="UD_Completed" type="checkbox" disabled class="form-control" />
+    </div>
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="UsersDiets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
