--- a/ExerciseXData/Views/DietPlans/Index.cshtml
+++ b/ExerciseXData/Views/DietPlans/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model List<ExerciseXData_ExerciseLibrary.Models.CategoriesModel>
+﻿@model List<ExerciseXData_DietLibrary.Models.UsersDietsModel>
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 
-<h1>Exercise Categories</h1>
+<h1>Users Diets Plan</h1>
 
 <!-- Display TempData message if it's set -->
 @if (TempData["success"] != null)
@@ -18,28 +18,41 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Category ID</th>
-            <th>Image</th>
-            <th>Name</th>
+            <th>User ID</th>
+            <th>Diet ID</th>
+            <th>Custom Diet Name</th>
+   
+            <th>Serving Size</th>
+            <th>Frequency</th>
+            <th>Total Calaroies</th>
             <th>Modified Date</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Completed </th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var category in Model)
+        @foreach (var usersDiets in Model)
         {
             <tr>
-                <td>@category.C_Id</td>
-                <td>@category.C_Image</td>
-                <td>@category.C_Name</td>
-                <td>@category.C_Modified_Date</td>
+                <td>@usersDiets.U_Id</td>
+                <td>@usersDiets.D_Id</td>
+                <td>@usersDiets.Custom_Diet_Name</td>
+                <td>@usersDiets.UD_Serving_Size</td>
+                <td>@usersDiets.UD_Frequency</td>
+                <td>@usersDiets.UD_Total_Calaroies</td>
+                <td>@usersDiets.UD_Modified_Date</td>
+                <td>@usersDiets.UD_Start_Date</td>
+                <td>@usersDiets.UD_End_Date</td>
+                <td>@usersDiets.UD_Completed</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Categories" asp-action="Edit" asp-route-id="@category.C_Id"
+                        <a asp-controller="Categories" asp-action="Edit" asp-route-id="@usersDiets.U_Id"
                            class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i>Edit
                         </a>
 
-                        <a asp-controller="Categories" asp-action="Delete" asp-route-id="@category.C_Id"
+                        <a asp-controller="Categories" asp-action="Delete" asp-route-id="@usersDiets.U_Id"
                            class="btn btn-primary mx-2">
                             <i class="bi bi-trash-fill"></i>Delete
                         </a>
