--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -16,19 +16,23 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" type="password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <br />
-            <div class="form-check">
+            
+            <div class="form-check mb-3">
                 <input asp-for="RememberMe" class="form-check-input" type="checkbox" />
                 <label asp-for="RememberMe" class="form-check-label"></label>
             </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Forgot Password</button>
-            <button type="submit" class="btn btn-primary">Login</button>
+          
+            <div class="d-flex gap-2">
+                <!-- Adds spacing between buttons -->
+                <button type="button" class="btn btn-link">Forgot Password</button>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
         </form>
     </div>
 </div>
